@@ -86,6 +86,7 @@ func getInfoFromStore(s ioStore) (*persistentAgentInfo, error) {
 		return nil, err
 	}
 
+	// reader is closed by this function
 	cfg, err := config.NewConfigFrom(reader)
 	if err != nil {
 		return nil, errors.New(err,
@@ -126,6 +127,7 @@ func updateAgentInfo(s ioStore, agentInfo *persistentAgentInfo) error {
 		return err
 	}
 
+	// reader is closed by this function
 	cfg, err := config.NewConfigFrom(reader)
 	if err != nil {
 		return errors.New(err, fmt.Sprintf("fail to read configuration %s for the agent", agentConfigFile),
